# PyJS

./: .gitignore  Makefile  main  pyjs.code-workspace
include/: AST.h  Expr.h  ExpressionPrinter.h  ExpressionVisitor.h  Literal.h  Parser.h  ParserException.h  Scanner.h  ScannerException.h  Statement.h  StatementVisitor.h  Token.h  TokenType.h  Untitled-3
include/Expressions/: And.h  Binary.h  Comparison.h  Equality.h  Expr.h  Factor.h  Func.h  Inline.h  Not.h  Or.h  Primary.h  Term.h  Unary.h
sandbox/: CMakeLists.txt  Makefile  Makefile3  Makefile4  gmock_tutorial_example.cpp  long_text.txt  test  test.cpp  test_mihai  test_mihai.cpp
src/: ExpressionPrinter.cpp  ExpressionVisitor.cpp  Literal.cpp  Parser.cpp  ParserException.cpp  Scanner.cpp  ScannerException.cpp  StatementVisitor.cpp  Token.cpp  TokenType.cpp  main.cpp  thinking.txt
src/Expressions/: And.cpp  Binary.cpp  Comparison.cpp  Equality.cpp  Expr.cpp  Factor.cpp  Func.cpp  Inline.cpp  Not.cpp  Or.cpp  Primary.cpp  Term.cpp  Unary.cpp
src/Statement/: ExprStmt.cpp  IfStmt.cpp
test/: Makefile  makeOutput.txt  makefile-gtest  test.cpp  test2.c2
test/mocks/: ParserMock.cpp  ScannerMock.cpp
test/testcases/: basic.txt
test/testcases/Scanner/input/: inline-if.py
test/testcases/Scanner/output/: tab.txt  (+3 more)
test/testcases/input/: comment.py  comparison-inline.py  comparison.py  compound.py  decimal.py  fizzbuzz.py  function-expr.py  function.py  if-stmt.py  scannerException.py  statement.py  string.py
test/testcases/output/: basic.txt  comment.txt  decimal.txt  fizzbuzz.txt  function.txt  string.txt
(+16 files in other folders)
